Created ServerModule1, Login and Chat; Edited settings and custom package dependencies; Deleted Form1

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -3,7 +3,9 @@ unique_ids:
     standard-page.html: 5HJE6E3D4FH25D2LJS3TEEARXWISQ67D
     theme.css: 3RG47UZIEMJ4QPGGIQSNUYT4WN3VCEZN
   forms:
-    Form1: VP54VNRN45JGFYMXU5X6WVYXP4WRO5NT
+    Chat: VP54VNRN45JGFYMXU5X6WVYXP4WRO5NT
+    Login: '1747692210668343007714721.022'
   modules: {}
   scripts: {}
-  server_modules: {}
+  server_modules:
+    ServerModule1: '1747693276210709717264207.8896'
