--- a/anvil.yaml
+++ b/anvil.yaml
@@ -27,8 +27,9 @@ db_schema:
     server: full
     title: Users
 dependencies: []
-name: M3 App 1
-package_name: M3_App_1
+metadata: {title: GreenKitten}
+name: GreenKitten
+package_name: GreenKitten
 renamed: true
 runtime_options:
   client_version: '3'
