--- a/client_code/Chat/form_template.yaml
+++ b/client_code/Chat/form_template.yaml
@@ -1,25 +1,41 @@
 components:
 - components:
-  - layout_properties: {grid_position: 'FEEDTK,PRVHDJ'}
-    name: pika_label
-    properties: {}
-    type: Label
   - components:
-    - name: pika_text_box
+    - layout_properties: {col_xs: 0, row: LIMNXW, width_xs: 12}
+      name: pika_label
+      properties: {text: Pika}
+      type: Label
+    - layout_properties: {col_xs: 0, row: KMNCUP, width_xs: 12}
+      name: pika_box
+      properties: {background: 'theme:Primary Container'}
+      type: Label
+    - layout_properties: {col_xs: 0, row: ZXSIRK, width_xs: 12}
+      name: user_label
+      properties: {bold: true, underline: true}
+      type: Label
+    - event_bindings: {change: user_box_change}
+      layout_properties: {col_xs: 0, row: AXGITI, width_xs: 12}
+      name: user_box
       properties: {}
-      type: RichText
-    layout_properties: {grid_position: 'PDVYHU,TOLZFZ'}
-    name: linear_panel_1
+      type: TextArea
+    layout_properties: {grid_position: 'XYZINC,RDAGUH'}
+    name: grid_panel_1
     properties: {}
-    type: LinearPanel
-  - layout_properties: {grid_position: 'PTJKHC,BIHERF'}
-    name: user_label
+    type: GridPanel
+  - components:
+    - data_bindings: []
+      layout_properties: {col_xs: 0, row: FOSXEV, width_xs: 12}
+      name: history_box_label
+      properties: {text: History (debug)}
+      type: Label
+    - layout_properties: {col_xs: 0, row: FCQHDA, width_xs: 12}
+      name: history_box
+      properties: {text: <History will be here>}
+      type: Label
+    layout_properties: {grid_position: 'NWNQAP,XIYOJT'}
+    name: grid_panel_2
     properties: {}
-    type: Label
-  - layout_properties: {grid_position: 'RSOEFZ,REIJMI'}
-    name: user_text_box
-    properties: {}
-    type: TextArea
+    type: GridPanel
   layout_properties: {slot: default}
   name: content_panel
   properties: {col_widths: '{}'}
@@ -37,6 +53,7 @@ components:
   properties: {text: Main Chat}
   type: Label
 container:
-  properties: {html: '@theme:standard-page.html'}
+  data_bindings: []
+  properties: {border: '', html: '@theme:standard-page.html', role: null}
   type: HtmlTemplate
 is_package: true
