Created ChatGPT Image May 19, 2025, 04_23_02 PM.png; Edited settings

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,5 +1,6 @@
 unique_ids:
   assets:
+    ChatGPT Image May 19, 2025, 04_23_02 PM.png: '1747697015732862709892592.0713'
     standard-page.html: 5HJE6E3D4FH25D2LJS3TEEARXWISQ67D
     theme.css: 3RG47UZIEMJ4QPGGIQSNUYT4WN3VCEZN
   forms:
