Edited settings, ServerModule1 and Chat

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -53,5 +53,8 @@ services:
 - client_config: {}
   server_config: {}
   source: /runtime/services/google.yml
+- client_config: {}
+  server_config: {}
+  source: /runtime/services/anvil/email.yml
 startup: {module: Chat, type: form}
 startup_form: null
