--- a/client_code/Chat/form_template.yaml
+++ b/client_code/Chat/form_template.yaml
@@ -16,7 +16,7 @@ components:
     - event_bindings: {change: user_box_change}
       layout_properties: {col_xs: 0, row: AXGITI, width_xs: 12}
       name: user_box
-      properties: {}
+      properties: {height: 96}
       type: TextArea
     layout_properties: {grid_position: 'XYZINC,RDAGUH'}
     name: grid_panel_1
@@ -26,12 +26,12 @@ components:
     - data_bindings: []
       layout_properties: {col_xs: 0, row: FOSXEV, width_xs: 12}
       name: history_box_label
-      properties: {text: History (debug)}
+      properties: {bold: false, text: History (debug), underline: true}
       type: Label
-    - layout_properties: {col_xs: 0, row: FCQHDA, width_xs: 12}
+    - layout_properties: {col_xs: 0, row: EZIIHZ, width_xs: 12}
       name: history_box
-      properties: {text: <History will be here>}
-      type: Label
+      properties: {auto_expand: false, border: 1px solid black, enabled: false, height: 487.33331298828125}
+      type: TextArea
     layout_properties: {grid_position: 'NWNQAP,XIYOJT'}
     name: grid_panel_2
     properties: {}
@@ -43,10 +43,15 @@ components:
 - components:
   - name: login_status
     properties: {}
-    type: TextArea
+    type: Label
+  - event_bindings: {click: logout_button_click}
+    layout_properties: {}
+    name: logout_button
+    properties: {role: elevated-button, text: Logout}
+    type: Button
   layout_properties: {slot: nav-right}
   name: navbar_links
-  properties: {}
+  properties: {border: 1px solid blue}
   type: FlowPanel
 - layout_properties: {slot: title}
   name: title
