--- a/anvil.yaml
+++ b/anvil.yaml
@@ -11,6 +11,17 @@ db_schema:
       type: string
     server: full
     title: attachments
+  errors:
+    client: none
+    columns:
+    - admin_ui: {order: 0, width: 200}
+      name: sender
+      type: string
+    - admin_ui: {order: 1, width: 200}
+      name: timestamp
+      type: datetime
+    server: full
+    title: errors
   received_messages:
     client: none
     columns:
