--- a/anvil.yaml
+++ b/anvil.yaml
@@ -6,7 +6,7 @@ db_schema:
     - admin_ui: {width: 200}
       name: attachment
       type: media
-    - admin_ui: {order: 1, width: 200}
+    - admin_ui: {width: 200}
       name: sender
       type: string
     server: full
@@ -14,10 +14,10 @@ db_schema:
   errors:
     client: none
     columns:
-    - admin_ui: {order: 0, width: 200}
+    - admin_ui: {width: 200}
       name: sender
       type: string
-    - admin_ui: {order: 1, width: 200}
+    - admin_ui: {width: 200}
       name: timestamp
       type: datetime
     server: full
@@ -25,11 +25,17 @@ db_schema:
   inline_attachments:
     client: none
     columns:
-    - admin_ui: {order: 0, width: 200}
-      name: attachment
-      type: string
-    - admin_ui: {order: 1, width: 200}
+    - admin_ui: {width: 200}
       name: sender
+      type: string
+    - admin_ui: {width: 200}
+      name: attachment
+      type: media
+    - admin_ui: {width: 200}
+      name: header
+      type: string
+    - admin_ui: {width: 200}
+      name: extracted_text
       type: string
     server: full
     title: inline_attachments
