--- a/anvil.yaml
+++ b/anvil.yaml
@@ -11,6 +11,17 @@ db_schema:
       type: string
     server: full
     title: attachments
+  chat_history:
+    client: none
+    columns:
+    - admin_ui: {order: 0, width: 200}
+      name: user
+      type: string
+    - admin_ui: {order: 1, width: 200}
+      name: chat_history
+      type: string
+    server: full
+    title: chat_history
   errors:
     client: none
     columns:
