--- a/client_code/Chat/form_template.yaml
+++ b/client_code/Chat/form_template.yaml
@@ -1,9 +1,5 @@
 components:
 - components:
-  - layout_properties: {grid_position: 'PPZXOR,RRPIUJ'}
-    name: title
-    properties: {text: Main Chat}
-    type: Label
   - components:
     - layout_properties: {col_xs: 0, row: LIMNXW, width_xs: 12}
       name: pika_label
@@ -44,23 +40,28 @@ components:
   name: content_panel
   properties: {col_widths: '{}'}
   type: ColumnPanel
-- components:
-  - name: login_status
-    properties: {}
-    type: Label
-  - event_bindings: {click: logout_button_click}
-    layout_properties: {}
-    name: logout_button
-    properties: {role: elevated-button, text: Logout}
-    type: Button
-  layout_properties: {slot: nav-right}
-  name: navbar_links
-  properties: {border: 1px solid blue}
-  type: FlowPanel
 - layout_properties: {slot: top-left-btn}
   name: image_1
   properties: {source: '_/theme/ChatGPT Image May 19, 2025, 04_23_02 PM.png'}
   type: Image
+- components:
+  - components:
+    - name: login_status
+      properties: {}
+      type: Label
+    - event_bindings: {click: logout_button_click}
+      layout_properties: {}
+      name: logout_button
+      properties: {role: elevated-button, text: Logout}
+      type: Button
+    layout_properties: {grid_position: 'PNSYUK,PPIASJ'}
+    name: navbar_links
+    properties: {border: ''}
+    type: FlowPanel
+  layout_properties: {slot: top-left-btn}
+  name: outlined_card_1
+  properties: {role: outlined-card}
+  type: ColumnPanel
 container:
   data_bindings: []
   properties: {border: '', html: '@theme:standard-page.html', role: null}
