Edited settings, ServerModule1 and Chat

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -17,9 +17,9 @@ db_schema:
     - admin_ui: {order: 0, width: 200}
       name: user
       type: string
-    - admin_ui: {order: 1, width: 200}
+    - admin_ui: {order: 2, width: 200}
       name: chat_history
-      type: string
+      type: simpleObject
     server: full
     title: chat_history
   errors:
