--- a/client_code/Chat/form_template.yaml
+++ b/client_code/Chat/form_template.yaml
@@ -5,10 +5,10 @@ components:
       name: pika_label
       properties: {bold: true, text: Pika, underline: true}
       type: Label
-    - layout_properties: {col_xs: 0, row: KMNCUP, width_xs: 12}
+    - layout_properties: {col_xs: 0, row: QXJDHP, width_xs: 12}
       name: pika_box
-      properties: {background: 'theme:Primary Container'}
-      type: Label
+      properties: {}
+      type: RichText
     - layout_properties: {col_xs: 0, row: ZXSIRK, width_xs: 12}
       name: user_label
       properties: {bold: true, underline: true}
@@ -18,7 +18,7 @@ components:
       name: user_box
       properties: {height: 96}
       type: TextArea
-    layout_properties: {grid_position: 'XYZINC,RDAGUH'}
+    layout_properties: {grid_position: 'RFNXGZ,LORITS'}
     name: grid_panel_1
     properties: {}
     type: GridPanel
